# CompilerRinha

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker.sh  genTests.sh  run.sh  test.sh
.github/workflows/: run.yml
include/: ast.h  context.h  operations.h  term.h
src/: ast.cpp  main.cpp  operations.cpp  term.cpp
tests/: closures.rinha  closures.rinha.json  combination.rinha.json  div.rinha  div.rinha.json  fib.rinha  fib.rinha.json  print.rinha  print.rinha.json  print2.rinha  print2.rinha.json  sum.rinha.json  ternario.rinha
